# django-graphql

./: .gitignore  .nowignore  Pipfile  django-graphql-dev-template-1591224613.json  manage.py  now.json  pyproject.toml  railway.json  requirements.txt  zappa_settings.json
djangopgraph/: schema.py  settings.py  wsgi.py
example/: asgi.py  settings.py  urls.py  wsgi.py
front/: .gitignore  elm.json  package-lock.json  package.json
movies/: models.py  mutation.py  schema.py  tests.py
