[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = ""
authors = ["Isaac Almanza <isaac.almanza19@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
graphene = "^3.2.2"
django-environ = "^0.10.0"
graphql-core = "^3.2.3"
graphene-django = "^3.1.2"
graphql-relay = "^3.2.0"


[tool.poetry.dev-dependencies]
aniso8601 = "^9.0.1"
asgiref = "^3.7.2"
coverage = "^7.2.7"
dj-database-url = "^2.0.0"
django-graphql-playground = "^1.0"
django-nose = "^1.4.7"
factory-boy = "^3.2.1"
faker = "^18.10.1"
nose = "^1.3.7"
promise = "^2.3"
psycopg2-binary = "^2.9.6"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
rx = "^3.2.0"
singledispatch = "^4.0.0"
six = "^1.16.0"
sqlparse = "^0.4.4"
text-unidecode = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
